RESOLVED FIXED14658
REGRESSION (r24381): right-click/control-click broken
https://bugs.webkit.org/show_bug.cgi?id=14658
Summary REGRESSION (r24381): right-click/control-click broken
Philippe Wittenbergh
Reported 2007-07-18 06:01:13 PDT
@rev 24399, summary says it all. rev 24285 worked fine. PowerPC OS X 10.4.10
Attachments
Patch with ChangeLog (1.77 KB, patch)
2007-07-21 14:28 PDT, Adam Roben (:aroben)
mitz: review+
Matt Lilek
Comment 1 2007-07-18 07:14:06 PDT
Right click works fine for me with r24403 - can you provide some more information such as any extensions you have installed, what/where you were trying to right click on, etc?
Philippe Wittenbergh
Comment 2 2007-07-18 07:26:20 PDT
(In reply to comment #1) > Right click works fine for me with r24403 - can you provide some more > information such as any extensions you have installed, what/where you were > trying to right click on, etc? Simply right click on a page (pretty simple html) to actually access the webinspector. No extensions, haxies or other animals installed. Both using the mouse (Kensington-mouse-in-a-box, 5buttons) and trackpad/keyboard. e.g this page http://nightly.webkit.org/start/?current-revision=24399
Alexey Proskuryakov
Comment 3 2007-07-18 10:00:19 PDT
*** Bug 14659 has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 4 2007-07-18 23:13:42 PDT
What type of mouse are you using? This works for me using Ctrl-Click on a PowerBook G4 with the built-in trackpad with a local debug build of WebKit r24439 on Safari 3.0 (522.12) with Mac OS X 10.4.10 (8R218).
Philippe Wittenbergh
Comment 5 2007-07-18 23:44:36 PDT
(In reply to comment #4) > What type of mouse are you using? See comment 2, where I mention a Kensington mouse and the trackpad (PowerBook g4 1.5Ghz). Just tested with an Apple Mouse (the mighty one). Idem dito. No reaction on right click. And no reaction on control click either. All other buttons of my Kensington mouse work as programmed with/for WebKit. And - of course- the rodent works correctly everywhere else (OS, Camino, terminal.app, etc, etc, etc). Comment 1 mentions build r24403 and you (comment 4) mention build r24439, which are more recent than what I have (r24399, latest from nightly.webkit.org). The issue might be fixed in those, I have no way to know. I can't build Webkit myself at the moment.
Philippe Wittenbergh
Comment 6 2007-07-19 02:26:44 PDT
Ok, nightly.webkit.org now has r24441 available. But it still has the same issue.
Geoffrey F. Green
Comment 7 2007-07-19 03:24:07 PDT
Existence of bug confirmed on r24441, Intel-based Mac, 10.4.10. (Using a Microsoft Optical Blue USB mouse); Right/Control-clicking continues to work elsewhere.
Robert McGovern
Comment 8 2007-07-19 04:09:45 PDT
Can confirm this bug on Intel MacBook using two finger right clicking. Basically right clicking on anything, including link, hasn't worked for the last two nightly builds I have tried: 18th July & 19th July
Alexey Proskuryakov
Comment 9 2007-07-19 04:32:02 PDT
Marking as a confirmed regression per the above comments.
David Kilzer (:ddkilzer)
Comment 10 2007-07-19 07:33:28 PDT
I see this with WebKit Nightly r24441 as well on Mac OS X 10.4.10 (8R218) with Safari 3.0 (522.12). Is this only an issue with release builds, or just with WebKit Nightly packaging?
David Kilzer (:ddkilzer)
Comment 11 2007-07-19 07:34:37 PDT
Mark Rowe (bdash)
Comment 12 2007-07-19 07:36:12 PDT
I don't see how this could be specific to the nightly builds.
Matt Lilek
Comment 13 2007-07-21 10:20:10 PDT
*** Bug 14703 has been marked as a duplicate of this bug. ***
Matt Lilek
Comment 14 2007-07-21 10:21:24 PDT
From Bug 14703: Actual Results: No contextual menu appears. An error is logged, e.g., *** -[NSCFArray objectAtIndex:]: index (1) beyond bounds (1).
Matt Lilek
Comment 15 2007-07-21 11:11:25 PDT
Doing a bit of snooping - this definitely regressed with r24381. 100% reproducible for me with Safari 2 and Coda, it's barfing on WebContentMenuClient.mm:106 (at least according to the NSException backtrace Coda printed to the console for me).
Matt Lilek
Comment 16 2007-07-21 11:13:30 PDT
(In reply to comment #15) > WebContentMenuClient.mm:106 > s/Content/Context
Adam Roben (:aroben)
Comment 17 2007-07-21 13:58:10 PDT
I think I know what's wrong. Patch coming.
Jakob Peterhänsel
Comment 18 2007-07-21 14:10:50 PDT
Just a confirmation, it suddently started to happen here as well. Was working fine yesterday in nightly 24399, I then upgraded to latest, and then paired a Apple Mighty Mouse BT.. = no Contextual Menu. Works fine in normal Safari 2.0.4, but not in nightly.
Adam Roben (:aroben)
Comment 19 2007-07-21 14:28:36 PDT
Created attachment 15615 [details] Patch with ChangeLog
mitz
Comment 20 2007-07-21 14:37:58 PDT
Comment on attachment 15615 [details] Patch with ChangeLog r=me
Adam Roben (:aroben)
Comment 21 2007-07-21 14:43:44 PDT
Landed in r24510
Note You need to log in before you can comment on or make changes to this bug.