        Fix REGRESSION: Right-click/control-click broken

http://bugs.webkit.org/show_bug.cgi?id=14658
        <rdar://problem/5346830>

        Reviewed by Mitz.

        * WebCoreSupport/WebContextMenuClient.mm:
        (fixMenusToSendToOldClients): Update defaultItemsCount after removing
        items from the defaultItems array.


Canonical link: https://commits.webkit.org/19152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24510 268f45cc-cd09-0410-ab3c-d52691b4dbfc